--- a/bookit/package.json
+++ b/bookit/package.json
@@ -11,10 +11,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
+    "axios-hooks": "^5.0.1",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mdb-ui-kit": "^6.4.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.4",
     "react": "^18.2.0",
